# CanvasGradeChecker

./: .gitignore  CanvasWebScraper.py  Galipatia Academic Success Database.xlsx  Galipatia Database Template.xlsx  GradeSheets.py  README.md  Setup.py  UpdateFromCSV.py  example_settings.ini  main.py  pyproject.toml  requirements.txt  settings.ini
