[tool.poetry]
name = "canvasgradechecker"
version = "0.1.0"
description = ""
authors = ["Reece Yankey"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
pandas = "^1.3.3"
beautifulsoup4 = "^4.10.0"
python-decouple = "^3.5"
openpyxl = "^3.0.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
